fix: cta container with signup button responsive on small devices

--- a/css/login.css
+++ b/css/login.css
@@ -255,19 +255,26 @@ form>div {
         width: 140px;
     } */
 
+    header {
+        padding: 36px 36px 16px 36px;
+    }
+
     form {
         padding: 32px 0;
     }
 
     .cta-container {
-        z-index: 997;
         width: 100%;
-        position: fixed;
-        bottom: 0;
-        left: 0;
         display: flex;
         justify-content: center;
-        padding: 5rem 0;
+        padding: 1rem 0;
+        margin-top: 2rem;
+    }
+
+    .cta-container div {
+        display: flex;
+        align-items: center;
+        gap: 16px;
     }
 }
 
